name:                gl-cube-demo
version:             0.1.0.0
synopsis:            Small OpenGL/GLUT demo of a cube rotating on keyboard events
description:         Small OpenGL/GLUT demo of a cube rotating on keyboard events.
                     The demo program structured as several modules. Modern OpenGL
                     is used.
homepage:            https://github.com/nbrk/gl-cube-demo
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable             gl-cube-demo
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , random
                     , GLUT
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nbrk/gl-cube-demo
